syntax = "proto3";

option csharp_namespace = "DiscountApp.Server";

package DiscountApp;

// The DiscountApp service definition.
service DiscountApp {
  rpc Generate (GenerateRequest) returns (GenerateReply);
  rpc UseCode (UseCodeRequest) returns (UseCodeReply);
}

enum UseCodeResponse
{   // whatever contents...
    SUCCESS = 0;
    DOESNOTEXIST = 1;
    USED = 2;
}

message GenerateRequest {
    int32 count = 1;
    int32 length = 2;
}
message GenerateReply {
  bool result =  1;
} 

message UseCodeRequest {
    string code = 1;
}
message UseCodeReply {
  UseCodeResponse result = 1;
}

